--- a/COSE - BO.ipynb
+++ b/COSE - BO.ipynb
@@ -33,23 +33,8 @@
     "    pars = [2.67347860e+00, 2.18887259e+01, 5.49402930e-03]\n",
     "    return (pars[0]+pars[1]*(1-pars[2])**(x-128))/factor\"\"\"\n",
     "\n",
-    "def describe_function(project_id, location, function_name):\n",
-    "    \"\"\"Uses the gcloud function describe command to get information about a function.\n",
-    "\n",
-    "    Args:\n",
-    "        project_id (str): project ID or project number of the Cloud Functions function.\n",
-    "        location (str): location of the function.\n",
-    "        function_name (str): name of the function which needs to be retrieved.\n",
-    "\n",
-    "    Returns:\n",
-    "        str: output of the gcloud function describe command.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    command = [\"gcloud\", \"functions\", \"describe\", function_name,\n",
-    "               \"--project\", project_id,\n",
-    "               \"--location\", location]\n",
-    "    output = subprocess.check_output(command)\n",
-    "    return output\n",
+    "def get_exectime(memory, cpu):\n",
+    "    return\n",
     "\n",
     "\"\"\"def get_lambda_cost (memory, exec_time): # calculate AWS Lambda cost, given memory allocated and execution time\n",
     "    return 0.0000002+(memory/1024.0)*exec_time*0.00001667\"\"\"\n",
@@ -66,10 +51,11 @@
    },
    "outputs": [],
    "source": [
-    "x = np.linspace(128, 3008, 10000-128).reshape(-1, 1)\n",
-    "node_type = np.linspace(0, 10000, 2).reshape(-1, 1)\n",
-    "y_c = get_runtime(x)*factor\n",
-    "plt.plot(x, y_c, label='Ground Truth')\n",
+    "x = np.linspace(128, 32768, 33000-128).reshape(-1, 1)\n",
+    "y = np.linspace(0.083, 8, 800 - 8).reshape(-1, 1)\n",
+    "# node_type = np.linspace(0, 10000, 2).reshape(-1, 1)\n",
+    "z_c = get_exectime(x, y)*factor\n",
+    "plt.plot(x, y, z_c, label='Ground Truth')\n",
     "plt.legend(loc='upper right')\n",
     "plt.show()"
    ]
@@ -83,13 +69,13 @@
    "outputs": [],
    "source": [
     "# define exploration space i.e. memory values \n",
-    "pbounds = { 'x': (128, 3008)}\n",
+    "pbounds = { 'x': (128, 32768), 'y': (0.083, 8)}\n",
     "\n",
     "optimizer = BayesianOptimization(\n",
     "    f=None,\n",
     "    pbounds=pbounds,\n",
     "    verbose=2,  # verbose = 1 prints only when a maximum is observed, verbose = 0 is silent\n",
-    "    random_state=randint(128, 3008)\n",
+    "    random_state=randint(128, 32768) # seed를 128, 3008로 잡은 이유가 있는지?\n",
     ")\n",
     "\n",
     "# BO parameters \n",
@@ -107,33 +93,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def posterior(optimizer, x_obs, y_obs, grid):\n",
+    "def posterior(optimizer, x_obs, y_obs, z_obs, grid):\n",
     "    optimizer._gp.fit(x_obs, y_obs)\n",
     "\n",
     "    mu, sigma = optimizer._gp.predict(grid, return_std=True)\n",
     "    return mu, sigma\n",
     "\n",
     "\n",
-    "def plot_gp(optimizer, x, y_c, acq_type, xi_value, kappa_value):\n",
+    "def plot_gp(optimizer, x, y, z_c, acq_type, xi_value, kappa_value):\n",
     "    global graph_counter\n",
-    "    fig = plt.figure(figsize=(7, 7))\n",
+    "    fig = plt.figure(figsize=(7, 7, 7))\n",
     "    steps = len(optimizer.space)\n",
     "    gs = gridspec.GridSpec(2, 1, height_ratios=[3, 1]) \n",
     "    axis = plt.subplot(gs[0])    \n",
     "    plt.subplots_adjust(wspace=0, hspace=0.12)\n",
     "    x_obs = np.array([[res[\"params\"][\"x\"]] for res in optimizer.res])\n",
-    "    y_obs = np.array([res[\"target\"] for res in optimizer.res])\n",
-    "    mu, sigma = posterior(optimizer, x_obs, y_obs, x)\n",
-    "    axis.plot(x, get_runtime(x)*factor, linewidth=3, label='Measured')\n",
-    "    axis.plot(x, mu*factor, '--', color='k', label='Prediction')\n",
-    "    axis.plot(x_obs.flatten(), get_runtime(x_obs)*factor, 'D', markersize=8, label=u'Observations', color='r')\n",
-    "    axis.fill_between(x.flatten(), (mu + sigma)*factor, (mu - sigma)*factor, alpha=0.3)\n",
+    "    y_obs = np.array([[res[\"params\"][\"y\"]] for res in optimizer.res])\n",
+    "    z_obs = np.array([res[\"target\"] for res in optimizer.res])\n",
+    "    mu, sigma = posterior(optimizer, x_obs, y_obs, z_obs, x)\n",
+    "    # axis.plot(x, get_runtime(x)*factor, linewidth=3, label='Measured')\n",
+    "    # axis.plot(x, mu*factor, '--', color='k', label='Prediction')\n",
+    "    # axis.plot(x_obs.flatten(), get_runtime(x_obs)*factor, 'D', markersize=8, label=u'Observations', color='r')\n",
+    "    # axis.fill_between(x.flatten(), (mu + sigma)*factor, (mu - sigma)*factor, alpha=0.3)\n",
     "\n",
-    "    axis.set_xlim((128, 3008))\n",
-    "    axis.set_ylim((0, 40))\n",
-    "    axis.set_ylabel('Execution Time (ms)', fontdict={'size':20})\n",
+    "    axis.set_xlim((128, 32768))\n",
+    "    axis.set_ylim((0.083, 8))\n",
+    "    axis.set_zlim((0, 40))\n",
     "    axis.set_xlabel('Memory (MB)', fontdict={'size':20})\n",
-    "    y_max = optimizer.max['target']\n",
+    "    axis.set_ylabel('vCPU', fontdict={'size':20})\n",
+    "    axis.set_zlabel('Execution Time (ms)', fontdict={'size':20})\n",
+    "    z_max = optimizer.max['target']\n",
     "    axis.legend(loc=1, bbox_to_anchor=(0.77, 0.99), borderaxespad=0., ncol=2, prop={'size': 14})\n",
     "    return mu,sigma"
    ]
@@ -153,16 +142,19 @@
     "while True:\n",
     "    \n",
     "    next_point = optimizer.suggest(utility)\n",
-    "    next_point['x']= int(round(float(next_point['x']))/ float(64)) * 64\n",
+    "    next_point['x'] = int(round(float(next_point['x']))/ float(64)) * 64\n",
+    "    next_point['y'] = float(next_point['y'])\n",
     "    print(\"Next point to probe is:\", next_point)\n",
-    "    target = get_runtime(**next_point)\n",
+    "    # target = get_runtime(**next_point)\n",
+    "    target = get_exectime(**next_point)\n",
     "    print(\"Found the target value to be:\", target)\n",
-    "    next_point['x'] = next_point['x']+random()\n",
+    "    next_point['x'] = next_point['x'] + random()\n",
+    "    next_point['y'] = next_point['y'] + random()\n",
     "    optimizer.register(params=next_point, target=target)\n",
     "    optimizer.set_gp_params(alpha=alpha_value)\n",
-    "    optimizer.set_gp_params(normalize_y=True)\n",
+    "    optimizer.set_gp_params(normalize_z=True)\n",
     "\n",
-    "    mu, sigma = plot_gp(optimizer, x, y_c, acq_type, xi_value, kappa_value)\n",
+    "    mu, sigma = plot_gp(optimizer, x, y, z_c, acq_type, xi_value, kappa_value)\n",
     "    print ('Samples so far:', counter)\n",
     "    counter+=1\n",
     "    if counter > total_samples:\n",
@@ -194,34 +186,6 @@
     "plt.ylabel('runtime (s)')\n",
     "plt.legend()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -240,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
