add resource configlist, modifying BO

--- a/COSE - BO.ipynb
+++ b/COSE - BO.ipynb
@@ -39,8 +39,10 @@
     "\"\"\"def get_lambda_cost (memory, exec_time): # calculate AWS Lambda cost, given memory allocated and execution time\n",
     "    return 0.0000002+(memory/1024.0)*exec_time*0.00001667\"\"\"\n",
     "\n",
+    "# 등급 2 가격 기준 (단위 $)\n",
     "def get_gcf_cost (memory, cpu, exec_time):\n",
-    "    return"
+    "    ''' 호출비용 + 단위메모리당 비용 + 단위cpu당 비용'''\n",
+    "    return 0.0000004 + (0.0000035 * (memory / 1024.0) * exec_time) + (0.0000140 * (cpu * 2.4) * exec_time)"
    ]
   },
   {
@@ -178,12 +180,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predicted_runtimes =  mu*factor\n",
+    "predicted_runtimes = mu*factor\n",
     "\n",
-    "plt.plot(x, get_runtime(x)*factor, linewidth=3, label='ground truth')\n",
-    "plt.plot(x,predicted_runtimes, '--', color='k', label='Prediction')\n",
+    "# plt.plot(x, get_runtime(x)*factor, linewidth=3, label='ground truth')\n",
+    "# plt.plot(x,predicted_runtimes, '--', color='k', label='Prediction')\n",
     "plt.xlabel('memory (MB)')\n",
-    "plt.ylabel('runtime (s)')\n",
+    "plt.ylabel('vCPU')\n",
+    "plt.zlabel('runtime (s)')\n",
     "plt.legend()\n"
    ]
   }
