changes memory limit from 32GiB to 16GiB

--- a/COSE - BO.ipynb
+++ b/COSE - BO.ipynb
@@ -8,6 +8,8 @@
    "source": [
     "import sys\n",
     "import subprocess\n",
+    "import requests\n",
+    "import time\n",
     "from bayes_opt import BayesianOptimization\n",
     "from bayes_opt import UtilityFunction\n",
     "from bayes_opt import SequentialDomainReductionTransformer\n",
@@ -33,11 +35,30 @@
     "    pars = [2.67347860e+00, 2.18887259e+01, 5.49402930e-03]\n",
     "    return (pars[0]+pars[1]*(1-pars[2])**(x-128))/factor\"\"\"\n",
     "\n",
-    "def get_exectime(memory, cpu):\n",
-    "    return\n",
+    "def get_exectime(x, y):\n",
+    "    # Configuring serverless function with suggested parameters\n",
+    "    deploy_command = f\"gcloud functions deploy io-intensive \\\n",
+    "        --source=https://source.developers.google.com/projects/woven-ceremony-418503/repos/io-intensive \\\n",
+    "        --trigger-http \\\n",
+    "        --runtime=python312 \\\n",
+    "        --allow-unauthenticated \\\n",
+    "        --entry-point=io_http \\\n",
+    "        --region=us-central1 \\\n",
+    "        --gen2 \\\n",
+    "        --memory={x}Mi \\\n",
+    "        --cpu={y}\"\n",
     "\n",
-    "\"\"\"def get_lambda_cost (memory, exec_time): # calculate AWS Lambda cost, given memory allocated and execution time\n",
-    "    return 0.0000002+(memory/1024.0)*exec_time*0.00001667\"\"\"\n",
+    "    # Execute the command\n",
+    "    output = subprocess.run(deploy_command, shell=True, check=True, capture_output=True)\n",
+    "    if output.stdout:\n",
+    "        print(f\"Update complete: Memory (MiB): {x}, vCPUs: {y}\")\n",
+    "    \n",
+    "    # Make a HTTP request and get the execution time\n",
+    "    start_time = time.time()\n",
+    "    requests.get(\"https://source.developers.google.com/projects/woven-ceremony-418503/repos/io-intensive\")\n",
+    "    end_time = time.time()\n",
+    "    exec_time = end_time - start_time\n",
+    "    return exec_time\n",
     "\n",
     "# 등급 1 가격 기준 (단위 $)\n",
     "def get_gcf_cost (memory, cpu, exec_time):\n",
@@ -53,8 +74,8 @@
    },
    "outputs": [],
    "source": [
-    "x = np.linspace(128, 32768, 33000-128).reshape(-1, 1)\n",
-    "y = np.linspace(0.083, 8, 800 - 8).reshape(-1, 1)\n",
+    "x = np.linspace(128, 16384, 16384-128).reshape(-1, 1) # memory\n",
+    "y = np.linspace(0.083, 8, 800 - 8).reshape(-1, 1) # vcpus\n",
     "# node_type = np.linspace(0, 10000, 2).reshape(-1, 1)\n",
     "z_c = get_exectime(x, y)*factor\n",
     "plt.plot(x, y, z_c, label='Ground Truth')\n",
@@ -71,13 +92,13 @@
    "outputs": [],
    "source": [
     "# define exploration space i.e. memory values \n",
-    "pbounds = { 'x': (128, 32768), 'y': (0.083, 8)}\n",
+    "pbounds = { 'x': (128, 16384), 'y': (0.083, 8)}\n",
     "\n",
     "optimizer = BayesianOptimization(\n",
     "    f=None,\n",
     "    pbounds=pbounds,\n",
     "    verbose=2,  # verbose = 1 prints only when a maximum is observed, verbose = 0 is silent\n",
-    "    random_state=randint(128, 32768) # seed를 128, 3008로 잡은 이유가 있는지?\n",
+    "    random_state=randint(128, 16384) # seed를 128, 3008로 잡은 이유가 있는지?\n",
     ")\n",
     "\n",
     "# BO parameters \n",
@@ -118,7 +139,7 @@
     "    # axis.plot(x_obs.flatten(), get_runtime(x_obs)*factor, 'D', markersize=8, label=u'Observations', color='r')\n",
     "    # axis.fill_between(x.flatten(), (mu + sigma)*factor, (mu - sigma)*factor, alpha=0.3)\n",
     "\n",
-    "    axis.set_xlim((128, 32768))\n",
+    "    axis.set_xlim((128, 16384))\n",
     "    axis.set_ylim((0.083, 8))\n",
     "    axis.set_zlim((0, 40))\n",
     "    axis.set_xlabel('Memory (MB)', fontdict={'size':20})\n",
