--- a/COSE - BO.ipynb
+++ b/COSE - BO.ipynb
@@ -1081,15 +1081,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##plot grounth truth and prediction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "##plot grounth truth and prediction\n",
     "predicted_runtimes = mu*factor\n",
     "\n",
     "# plt.plot(x, get_runtime(x)*factor, linewidth=3, label='ground truth')\n",
@@ -1117,7 +1109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.undefined.undefined"
   }
  },
  "nbformat": 4,
